--- a/src/App.css
+++ b/src/App.css
@@ -2,32 +2,26 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+nav {
   display: flex;
-  flex-direction: column;
+  background-color: rgb(22, 39, 49);
+  min-height: 20vh;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-around;
+  color: aliceblue;
 }
 
-.App-link {
-  color: #61dafb;
+.nav-links {
+  width: 25%;
+  justify-content: space-around;
+  display: flex;
+  list-style: none;
+  align-items: center;
+  float: right;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+a:link {
+  text-decoration: none;
+}
+li {
+  color: lightgoldenrodyellow
 }
